--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             background-color: rgb(218, 218, 218);
         }
         div{
-    
+            margin: 0 10px;
             overflow-x: auto;
         }
     </style>
